m68k/m68k_test_files/emit_tests/e.expect





gen_insn: const args = true
validate: info = info [sz: v, words: 1, arg_c: 0, tst: void] 
validate: info = OK
validate: count with arg_c = 0
validate: args with validate_t::cpu(arg, info)
validate: OK
 0: info [sz: v, words: 1, arg_c: 0, tst: void] -> [2,2] 
candidates: 1 : 1 : size = [2,2] : result = 2




























err : St13runtime_error: kas_position_tagged::kas_loc: zero handler

0000_0000'  64                     .byte   100
0000_0001'  25 00* 06'             .byte   37, foo, . + 2
            = 0000_0064            equ_1   = 100
            = 0000_0002?           equ_2   = foo + . - 2
            = 0000_0064            equ_3   = equ_1
0000_0004'  4e71                   nop     ; create org at "un-dotted" location
0000_0064'                         .org        100
0000_0064'  0000 0000 0000 0000    .org        . + 10
            0000                   
                                   ; following is wrong
                                   ;.      = 64
0000_006e'  0000                   .       = . + 2
                                   
            = 0000_00e0'           equ_dot = .
            = 0000_0006*           equ_4   = 99$ + 3
            = 0000_00dc'           equ_5   = 2f - 2
0000_0070'  00e0' 00e8'            2:  .word   2b, 2f
0000_0074'                         2:
            =                      equ_6   = 3b * 3
                                                 ~~~ <<-- Here
dummy_path:18:Error: Invalid expression
            = 0000_0008            equ_66  = 8
            = 0000_0004            equ_7   = 4
0000_0074'                         ;
                                   ~ <<-- Here
dummy_path:21:Error: Expecting: Opcode or Label
                                   junk
0000_0000x                         .text   2
0000_0000x                         .text9  2, 4
                                    <<-- Here
dummy_path:24:Error: Expecting: Opcode or Label
0000_0000x                         .lcomm  lc1, 5
0000_0000x                         .lcomm  lc2, 3.2
                                                   ~~~ <<-- Here
dummy_path:26:Error: common size must be fixed value
0000_0000x                         .lcomm  lc3
                                             ~~~ <<-- Here
dummy_path:27:Error: Too few arguments
0000_0000x                         .lcomm  4, lc4
                                             ~ <<-- Here
dummy_path:28:Error: symbol name not specified
0000_0000x                         .lcomm  lc4, 4
0000_0000x                         .comm   cs, 8
0000_0000x                         .comm   cs2, 0
                                                 ~ <<-- Here
dummy_path:31:Error: zero common size
0000_0000x                         .globl  cs, lc4, lc2, equ_7
                                   
